Fix portrait photo to be not centered on mobile device

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -92,3 +92,7 @@ a {
 a:hover {
   color: $dark-grey;
 }
+
+.img-circle {
+  border-radius: 50%;
+}
