--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,8 +11,6 @@
   }
 
   .header__img-container {
-    display: ruby;
-
     img {
       max-height: 30rem;
     }
